--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,16 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-      <groupId>com.threeaspen</groupId>
-      <artifactId>mobile-lib-base</artifactId>
-      <version>1.0-SNAPSHOT</version>
+        <groupId>com.threeaspen</groupId>
+        <artifactId>mobile-lib-base</artifactId>
+        <version>1.1</version>
     </parent>
     <groupId>com.threeaspen.android</groupId>
     <artifactId>android-threads</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>Android Threading Library</name>
+    <scm>
+        <developerConnection>scm:svn:svn+ssh://svn.broudy.net/svn-projects/broudy/mobile/android-threads/trunk</developerConnection>
+    </scm>
 </project>
