--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.threeaspen</groupId>
         <artifactId>mobile-lib-base</artifactId>
-        <version>1.1</version>
+        <version>1.3</version>
     </parent>
     <groupId>com.threeaspen.android</groupId>
     <artifactId>android-threads</artifactId>
@@ -14,4 +14,11 @@
     <scm>
         <developerConnection>scm:svn:svn+ssh://svn.broudy.net/svn-projects/broudy/mobile/android-threads/trunk</developerConnection>
     </scm>
+    <dependencies>
+        <dependency>
+            <groupId>com.threeaspen.android</groupId>
+            <artifactId>android-app</artifactId>
+            <version>1.2</version>
+        </dependency>
+    </dependencies>
 </project>
